# PFT_FEM_MNI

./: .gitignore  README.md  pyproject.toml  test_features_lightweight.ipynb  test_new_features.ipynb  test_new_features_quick.ipynb
data/atlases/HCP1065_DTI/: README.md
data/atlases/MNI152/: README.md
data/atlases/SUIT/: README.md
data/solvers/default_posterior_fossa/: README.md  boundary_nodes.npy  mesh.vtu  solver_metadata.json
data/solvers/default_posterior_fossa/matrices/: diffusion_matrix.npz  mass_matrix.npz  stiffness_matrix.npz
data/solvers/default_posterior_fossa/precomputed/: element_volumes.npy  node_fiber_directions.npy  node_tissues.npy  shape_gradients.pkl
notebooks/: api_demo.ipynb
src/pft_fem/: __init__.py  atlas.py  biophysical_constraints.py  cli.py  create_default_solver.py  dti_mesh.py  fem.py  io.py  mesh.py  simulation.py  transforms.py
tests/: __init__.py  conftest.py  test_atlas.py  test_biophysical_constraints.py  test_dti_mesh.py  test_fem.py  test_mesh.py  test_transforms.py
